--- a/desecure-vault-frontend/package.json
+++ b/desecure-vault-frontend/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reown/appkit": "^1.7.1",
+    "@reown/appkit-adapter-wagmi": "^1.7.1",
+    "@reown/appkit-siwe": "^1.7.1",
+    "@reown/appkit-wallet-button": "^1.7.1",
+    "@tanstack/react-query": "^5.71.1",
+    "axios": "^1.8.4",
+    "ethers": "^6.13.5",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "siwe": "^3.0.0",
+    "viem": "^2.24.3",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
