--- a/desecure-vault-backend/package.json
+++ b/desecure-vault-backend/package.json
@@ -19,7 +19,13 @@
     "ethers": "^6.13.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "file-saver": "^2.0.5",
+    "file-type": "^20.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
+    "kubo": "^0.34.1",
+    "kubo-rpc-client": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "siwe": "^3.0.0",
