--- a/desecure-vault-frontend/package.json
+++ b/desecure-vault-frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "siwe": "^3.0.0",
+    "snarkjs": "^0.7.5",
     "sonner": "^2.0.3",
     "viem": "^2.24.3",
     "wagmi": "^2.14.16"
